crates/rome_js_formatter/tests/specs/prettier/js/tuple/destructuring.js.snap
---
source: crates/rome_js_formatter/tests/prettier_tests.rs
info:
  test_file: "js\\tuple\\destructuring.js"
---

# Input

```js
const [a, b] = #[1, 2];
assert(a === 1);
assert(b === 2);

const [a, ...rest] = #[1, 2, 3];
assert(a === 1);
assert(Array.isArray(rest));
assert(rest[0] === 2);
assert(rest[1] === 3);
```


# Prettier differences

```diff
--- Prettier
+++ Rome
@@ -1,8 +1,10 @@
-const [a, b] = #[1, 2];
+const [a, b] = #;
+[1, 2];
 assert(a === 1);
 assert(b === 2);
 
-const [a, ...rest] = #[1, 2, 3];
+const [a, ...rest] = #;
+[1, 2, 3];
 assert(a === 1);
 assert(Array.isArray(rest));
 assert(rest[0] === 2);
```

# Output

```js
const [a, b] = #;
[1, 2];
assert(a === 1);
assert(b === 2);

const [a, ...rest] = #;
[1, 2, 3];
assert(a === 1);
assert(Array.isArray(rest));
assert(rest[0] === 2);
assert(rest[1] === 3);
```


# Errors
```
destructuring.js:1:17 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × expected an identifier but instead found '['
  
  × Expected an identifier here
  
    ┌─ destructuring.js:1:17
    │
  1 │ const [a, b] = #[1, 2];
    │                 ^
  
destructuring.js:1:16 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Private names are only allowed on the left side of a 'in' expression
  
    ┌─ destructuring.js:1:16
    │
  1 │ const [a, b] = #[1, 2];
    │                ^
  
destructuring.js:1:17 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Expected a semicolon or an implicit semicolon after a statement, but found none
  
  × An explicit or implicit semicolon is expected here...
  
    ┌─ destructuring.js:1:17
    │
  1 │ const [a, b] = #[1, 2];
    │                 ^
  
  i ...Which is required to end this statement
  
    ┌─ destructuring.js:1:1
    │
  1 │ const [a, b] = #[1, 2];
    │ ^^^^^^^^^^^^^^^^
  
destructuring.js:5:23 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × expected an identifier but instead found '['
  
  × Expected an identifier here
  
    ┌─ destructuring.js:5:23
    │
  5 │ const [a, ...rest] = #[1, 2, 3];
    │                       ^
  
destructuring.js:5:22 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Private names are only allowed on the left side of a 'in' expression
  
    ┌─ destructuring.js:5:22
    │
  5 │ const [a, ...rest] = #[1, 2, 3];
    │                      ^
  
destructuring.js:5:23 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Expected a semicolon or an implicit semicolon after a statement, but found none
  
  × An explicit or implicit semicolon is expected here...
  
    ┌─ destructuring.js:5:23
    │
  5 │ const [a, ...rest] = #[1, 2, 3];
    │                       ^
  
  i ...Which is required to end this statement
  
    ┌─ destructuring.js:5:1
    │
  5 │ const [a, ...rest] = #[1, 2, 3];
    │ ^^^^^^^^^^^^^^^^^^^^^^
  

```


